fix page height on mobile

--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body {
 
 .page {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
 }
 
 .cover-page {
